# Prepp1

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cc_steps/: 00_README.md  01_meta_and_modes.md  02_phase-2_triage.md  03_phase-1_context.md  04_phase0_role.md  10_phase1_spec.md  11_phase1.5_tech.md  12_phase2_design.md  13_phase3_validate.md  14_phase4_freeze.md  15_phase5_implement.md  16_phase6_test.md  17_phase7_debug.md  18_phase8_harden.md  19_phase8.5_deliver.md  20_phase9_review.md  21_phase10_operate.md  30_decision_frameworks.md  31_data_layer.md  32_api_design.md  33_dependencies_supply_chain.md  34_security.md  35_governance_compliance.md  36_pillars.md  99_quick_reference.md
docs/: design.md  spec.md
docs/adr/: 0001-stack-and-architecture.md  0002-similarity-and-aggregation.md
src/agent_eval/: __init__.py  aggregation.py  comparators.py  demo.py  engine.py  errors.py  explain.py  models.py  results.py  store.py
src/agent_eval/mockdata/: __init__.py  backend.py  nosql_backend.py  seed.py  sql_backend.py
tests/: test_aggregation.py  test_comparators.py  test_engine.py  test_explain.py  test_mockdata.py  test_models.py  test_properties.py  test_review_fixes.py  test_ui_smoke.py
ui/: app.py
