[project]
name = "agent-eval"
version = "0.1.0"
description = "In-memory engine that scores an AI agent's tool-call path against reference paths."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "smurri" }]
keywords = ["llm", "agent", "evaluation", "scoring", "tool-use"]
dependencies = []  # zero runtime dependencies by constraint

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval"]

[dependency-groups]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.6", "pytest-cov>=5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
